# gittest_selfup_ns

./: .gitattributes  .gitignore  CMakeLists.txt
cmake/Modules/: FindShlwapi.cmake  GenHeader.cmake  GenVersion.cmake
data/: imgpbblip_96_32_.data  imgpbempty_384_32_.data  imgpbfull_384_32_.data  logo.data  ns_conf_builtin.conf  selfup_ns.service  upload.sh  upload_build.sh
include/selfup/: NetworkPacket.h  TCPAddress.h  TCPAsync.h  TCPSocket.h  ns_conf.h  ns_crash.h  ns_ex.h  ns_ex_config.h  ns_filesys.h  ns_git_aux.h  ns_git_shims.h  ns_gui.h  ns_helpers.h  ns_log.h  ns_selfup_aux.h  ns_systemd.h  ns_thread.h  ns_version.h.in
src/: NetworkPacket.cpp  TCPAddress.cpp  TCPAsync.cpp  TCPSocket.cpp  ns_conf.cpp  ns_crash.cpp  ns_ex.cpp  ns_ex_config.cpp  ns_ex_main.cpp  ns_filesys.cpp  ns_git_aux.cpp  ns_git_shims.cpp  ns_gui.cpp  ns_gui_win.cpp  ns_helpers.cpp  ns_log.cpp  ns_selfup_aux.cpp  ns_selfup_ex.cpp  ns_selfup_main.cpp  ns_serv_main.cpp  ns_systemd.cpp  ns_thread.cpp
